# abm-project

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml  run-mypy
.github/workflows/: mypy.yaml  ruff.yaml
src/abm/: __init__.py
src/abm/base_version/: agent.py  city_map.py  model.py
src/abm/base_version/utils/: global_model_parameters.py  prob_func.py  util_func.py
src/abm/cli/: __init__.py  grids.py
src/abm/cli/utils/: __init__.py  version.py
tests/: test_proba.py
