[project]
name = "abm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcell Szegedi", email = "szegedi.marcell@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "numpy>=2.2.6",
    "pytest>=8.4.0",
    "scipy>=1.15.3",
    "typer>=0.16.0",
]

[project.scripts]
abm = "abm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
