[project]
name = "abm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcell Szegedi", email = "szegedi.marcell@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mesa==2.1.5",
    "mypy>=1.16.0",
    "numpy>=2.2.6",
    "pandas-stubs>=2.2.3.250527",
    "pytest>=8.4.0",
    "scipy>=1.15.3",
    "typer>=0.16.0",
    "types-tqdm>=4.67.0.20250516",
]

[project.scripts]
abm = "abm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
